--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -64,12 +64,14 @@
                 transition: width 0.5s ease;
                 height: 2px;
                 background-color: $main-color;
+                
             }
 
             &.active::after,
             &:hover::after {
                 width: 100%;
             }
+            
         }
 
         @include mobile {
@@ -77,7 +79,7 @@
             bottom: 0;
             left: 0;
             height: 5rem;
-            width: 100%;
+            width: 100vw;
             background-color: $body-bg;
             padding: 0 2rem;
             box-shadow: $box-shadow;
