Re-aligned Search Button Height

--- a/src/components/movie-grid/movie-grid.scss
+++ b/src/components/movie-grid/movie-grid.scss
@@ -37,7 +37,7 @@
         position: absolute;
         right: 0;
         margin-right: 1rem;
-
+        top: 2px;
         @include mobile {
             right: 1px;
             top: 1px;
