Changed Colour of theme

--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,3 +1,16 @@
-.t{
-    margin-top: 20rem;
+.profile_title{
+    margin-top: 2rem;
+}
+.button_box{
+    margin-top: 5rem;
+}
+
+.email_result{
+    font-size: large;
+}
+.first_name{
+    font-size: large;
+}
+.button{
+    margin-top: 1.5rem;
 }
