--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -1,10 +1,10 @@
 //@import "compass/css3";
 @use "../../scss/variables" as *;
 //$body-bg: #c1bdba;
-$form-bg: #0e0e0e;
+$form-bg: #2f433e;
 //$white: #ffffff;
 
-$mainf: #bd1000;
+$mainf: #52796f;
 $main-light: lighten($mainf,5%);
 $main-dark: darken($mainf,5%);
 
