--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
-$body-bg: #181818;
-$main-color: #ff0000;
+$body-bg: #2f3e46;
+$main-color: #308d76;
 $txt-color: #fff;
 $white: #fff;
 $black: #000000;
@@ -7,7 +7,7 @@ $box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
 
 $header-height: 8rem;
 $header-shrink-height: 5rem;
-$border-radius: 30px;
+$border-radius: 5px;
 $mobile-width: 600px;
 $tablet-width: 1024px;
 
